# scar-test-runner

./: .gitignore  API.md  CMakeLists.txt  LICENSE  Makefile  README.md  implementation-plan.md  merged_scardoc.json
.github/workflows/: ci.yml  release.yml
examples/mod/assets/scar/winconditions/: example_wc.scar
examples/test/: test_assert_eq_userdata.scar  test_example_wc.scar  test_resource.scar  test_spy.scar  test_ui.scar
examples/test/test_resources/: helper.scar
src/: game_state.c  game_state.h  main.c  mock_blueprint.c  mock_blueprint.h  mock_core.c  mock_core.h  mock_egroup.c  mock_egroup.h  mock_entity.c  mock_entity.h  mock_game.c  mock_game.h  mock_misc.c  mock_misc.h  mock_player.c  mock_player.h  mock_sgroup.c  mock_sgroup.h  mock_squad.c  mock_squad.h  mock_territory.c  mock_territory.h  mock_ui.c  mock_ui.h  scar_state.c  scar_state.h  test_api.c  test_api.h  test_runner.c  test_runner.h
